adding support for flex tokens

--- a/templates/fgt.conf
+++ b/templates/fgt.conf
@@ -1,3 +1,8 @@
+Content-Type: multipart/mixed; boundary="==FGTCONF=="
+MIME-Version: 1.0
+
+--==FGTCONF==
+
 config system global
     set admin-sport ${admin_port}
     set hostname ${fgt_name}
@@ -78,3 +83,26 @@ config firewall policy
         set nat enable
     next
 end
+
+
+%{ if license_type == "flex" }
+--==FGTCONF==
+Content-Type: text/plain; charset="us-ascii"
+MIME-Version: 1.0
+Content-Transfer-Encoding: 7bit
+Content-Disposition: attachment; filename="license"
+
+LICENSE-TOKEN:${license_token}
+
+%{ endif }
+%{ if license_type == "byol" }
+--==FGTCONF==
+Content-Type: text/plain; charset="us-ascii"
+MIME-Version: 1.0
+Content-Transfer-Encoding: 7bit
+Content-Disposition: attachment; filename="license"
+
+${file(license_file)}
+
+%{ endif }
+--==FGTCONF==--
