--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -13,10 +13,10 @@ prefix = "resource_prefix"
 # 7.4.1 BYOL is projects/fortigcp-project-001/global/images/fortinet-fgt-743-20240208-001-w-license
 fortigate_vm_image     = "projects/fortigcp-project-001/global/images/fortinet-fgtondemand-743-20240208-001-w-license"
 fortigate_machine_type = "n2-standard-2"
-fortigate_license_files = {
-  fgt1_instance    = { name = null }
-  fgt2_instance = { name = null }
-}
+#fgt1_license_file = "fgt1.lic"
+#fgt2_license_file = "fgt2.lic"
+fgt1_license_token = "8520A402A0AD1D18E31C"
+fgt2_license_token = "BB133A191F95B0F12F9E"
 admin_port = 8443
 fgt_password = "fortinet"
 
