--- a/templates/fgt.conf
+++ b/templates/fgt.conf
@@ -85,7 +85,7 @@ config firewall policy
 end
 
 
-%{ if license_type == "flex" }
+%{ if ${license_type} == "flex" }
 --==FGTCONF==
 Content-Type: text/plain; charset="us-ascii"
 MIME-Version: 1.0
@@ -95,7 +95,7 @@ Content-Disposition: attachment; filename="license"
 LICENSE-TOKEN:${license_token}
 
 %{ endif }
-%{ if license_type == "byol" }
+%{ if ${license_type} == "byol" }
 --==FGTCONF==
 Content-Type: text/plain; charset="us-ascii"
 MIME-Version: 1.0
