--- a/templates/fgt.conf
+++ b/templates/fgt.conf
@@ -84,25 +84,26 @@ config firewall policy
     next
 end
 
-
-%{ if license_type == "flex" }
---==FGTCONF==
-Content-Type: text/plain; charset="us-ascii"
-MIME-Version: 1.0
-Content-Transfer-Encoding: 7bit
-Content-Disposition: attachment; filename="license"
-
 LICENSE-TOKEN:${license_token}
 
-%{ endif }
-%{ if license_type == "byol" }
---==FGTCONF==
-Content-Type: text/plain; charset="us-ascii"
-MIME-Version: 1.0
-Content-Transfer-Encoding: 7bit
-Content-Disposition: attachment; filename="license"
+# %{ if license_type == "flex" }
+# --==FGTCONF==
+# Content-Type: text/plain; charset="us-ascii"
+# MIME-Version: 1.0
+# Content-Transfer-Encoding: 7bit
+# Content-Disposition: attachment; filename="license"
 
-${file(license_file)}
+# LICENSE-TOKEN:${license_token}
 
-%{ endif }
---==FGTCONF==--
+# %{ endif }
+# %{ if license_type == "byol" }
+# --==FGTCONF==
+# Content-Type: text/plain; charset="us-ascii"
+# MIME-Version: 1.0
+# Content-Transfer-Encoding: 7bit
+# Content-Disposition: attachment; filename="license"
+
+# ${file(license_file)}
+
+# %{ endif }
+# --==FGTCONF==--
