updating BES config and modifying templates for easier use of tokens and files

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -7,16 +7,20 @@ zone2 = "az2 name"
 prefix = "resource_prefix"
 
 # FortiGate image and instance type
-# 7.2.8 PAYG is projects/fortigcp-project-001/global/images/fortinet-fgtondemand-728-20240318-001-w-license
-# 7.2.8 BYOL is projects/fortigcp-project-001/global/images/fortinet-fgt-728-20240318-001-w-license
-# 7.4.3 PAYG is projects/fortigcp-project-001/global/images/fortinet-fgtondemand-743-20240208-001-w-license
-# 7.4.3 BYOL is projects/fortigcp-project-001/global/images/fortinet-fgt-743-20240208-001-w-license
-fortigate_vm_image     = "projects/fortigcp-project-001/global/images/ fortinet-fgt-745-20240918-001-w-license"
+# 7.4.7 PAYG is projects/fortigcp-project-001/global/images/fortinet-fgtondemand-747-20250123-001-w-license
+# 7.4.7 BYOL is projects/fortigcp-project-001/global/images/fortinet-fgt-747-20250123-001-w-license
+fortigate_vm_image     = "projects/fortigcp-project-001/global/images/fortinet-fgt-747-20250123-001-w-license"
 fortigate_machine_type = "n2-standard-2"
-#fgt1_license_file = "fgt1.lic"
-#fgt2_license_file = "fgt2.lic"
-fgt1_license_token = "8520A402A0AD1D18E31C"
-fgt2_license_token = "BB133A191F95B0F12F9E"
+
+fortigate_license_files = {
+  fgt1_instance    = { name = null }
+  fgt2_instance = { name = null }
+}
+
+license_type = "flex" # can be byol, flex, or payg, make sure the license is correct for the sku
+
+flex_tokens = ["token1", "token2"]
+
 admin_port = 8443
 fgt_password = "fortinet"
 
