--- a/templates/fgt.conf
+++ b/templates/fgt.conf
@@ -2,6 +2,10 @@ Content-Type: multipart/mixed; boundary="==FGTCONF=="
 MIME-Version: 1.0
 
 --==FGTCONF==
+Content-Type: text/plain; charset="us-ascii"
+MIME-Version: 1.0
+Content-Transfer-Encoding: 7bit
+Content-Disposition: attachment; filename="config"
 
 config system global
     set admin-sport ${admin_port}
@@ -84,26 +88,26 @@ config firewall policy
     next
 end
 
-LICENSE-TOKEN:${license_token}
-
-# %{ if license_type == "flex" }
-# --==FGTCONF==
-# Content-Type: text/plain; charset="us-ascii"
-# MIME-Version: 1.0
-# Content-Transfer-Encoding: 7bit
-# Content-Disposition: attachment; filename="license"
-
 # LICENSE-TOKEN:${license_token}
 
-# %{ endif }
-# %{ if license_type == "byol" }
-# --==FGTCONF==
-# Content-Type: text/plain; charset="us-ascii"
-# MIME-Version: 1.0
-# Content-Transfer-Encoding: 7bit
-# Content-Disposition: attachment; filename="license"
+%{ if license_type == "flex" }
+--==FGTCONF==
+Content-Type: text/plain; charset="us-ascii"
+MIME-Version: 1.0
+Content-Transfer-Encoding: 7bit
+Content-Disposition: attachment; filename="license"
 
-# ${file(license_file)}
+LICENSE-TOKEN:${license_token}
 
-# %{ endif }
-# --==FGTCONF==--
+%{ endif }
+%{ if license_type == "byol" }
+--==FGTCONF==
+Content-Type: text/plain; charset="us-ascii"
+MIME-Version: 1.0
+Content-Transfer-Encoding: 7bit
+Content-Disposition: attachment; filename="license"
+
+${file(license_file)}
+
+%{ endif }
+--==FGTCONF==--
