adding FGSP support

--- a/templates/fgt.conf
+++ b/templates/fgt.conf
@@ -88,7 +88,23 @@ config firewall policy
     next
 end
 
-# LICENSE-TOKEN:${license_token}
+%{ if fgsp == "true" }
+config system ha
+    set session-pickup enable
+    set session-pickup-connectionless enable
+    set session-pickup-nat enable
+end
+
+config system standalone-cluster
+    set standalone-group-id 1
+    set group-member-id ${ha_index}
+    config cluster-peer
+        edit 0
+        set peerip ${peerip}
+        next
+    end
+end
+%{ endif }
 
 %{ if license_type == "flex" }
 --==FGTCONF==
